Fix line bug on safari for background clip text

--- a/src/client/styles/views/header.scss
+++ b/src/client/styles/views/header.scss
@@ -25,6 +25,7 @@
 	.title-wrapper, .about-wrapper, .work-wrapper, .contact-wrapper {
 		position: relative;
 		width: auto;
+		clip-path: inset(1px);
 	
 		.base, .gradient {
 			transform: translateX(-50%);
@@ -37,6 +38,8 @@
 			text-align: center;
 			transition: 0.4s;
 			z-index: 3;
+			padding: 1px;
+	
 
 			a {
 				color: transparent;
@@ -61,6 +64,7 @@
 					rgba(255,255,255,0.75) 44%,
 					rgba(187,188,187,0) 95%,
 					rgba(187,187,187,0) 100%);
+				background-clip: text;
 				-webkit-background-clip: text;
 			}
 		}
@@ -107,6 +111,7 @@
 	background: #b8b8b8 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
 	background-image: -webkit-linear-gradient(-40deg, transparent 0%, transparent 40%, #fff 50%, transparent 60%, transparent 100%);
 	overflow: hidden;
+	background-clip: text;
 	-webkit-background-size: 200%;
 	-webkit-background-clip: text;
 	-webkit-animation-name: shine;
